# zkcompiler

./: Android.mk  CDashTestbench.cmake  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  README.md  UseDoxygen.cmake  readme.txt
include/: sysdeps.hpp
include/CodeManagement/ccr/: ACCRVisitor.hpp  ACollectedCodeRepr.hpp  AConstructorCallCCR.hpp  ACopyAssignmentCallCCR.hpp  ACopyConstructorCallCCR.hpp  ADestructorCallCCR.hpp  AExecutableCCR.hpp  AFunctionCallCCR.hpp  AInstructionCallCCR.hpp  AOperatorCallCCR.hpp  AProcedureCallCCR.hpp  AVarSpecialCallCCR.hpp  AVariableCCR.hpp
include/CodeManagement/ccr/impl/: CommentCCR.hpp  ConstructorCallCCR.hpp  CopyAssignmentCallCCR.hpp  CopyConstructorCallCCR.hpp  DestructorCallCCR.hpp  (+8 more)
include/CodeManagement/ccw/: AFunction.hpp  AInstruction.hpp  AOperator.hpp  AProcedure.hpp  AVariable.hpp
include/CodeManagement/core/: ACodeObserver.hpp
include/CodeManagement/exec/: AExplicitCSrcInstCaster.hpp  AImplicitSrcInstCaster.hpp  ASourceInstanceCaster.hpp  AVariableInstance.hpp  AVariablesTable.hpp
include/bignum/: bignum.hpp
include/compiler/: ACCRtoCodeCompiler.hpp  AZKProtocol.hpp  CCodeIdentifiers.hpp  ProgramCCRtoCCodeCompiler.hpp  ZKFileToProgramCCRCompiler.hpp  ZKProgramCCRTester.hpp
include/element/: atomic.hpp  element.hpp  tuple.hpp
include/group/: group.hpp  z.hpp  z_add_n.hpp  z_mul_n.hpp
include/hash/: hash.hpp  sha1.hpp
include/hom/: hom.hpp
include/parser/: parser.hpp
include/random/: random.hpp  random_seed.h
include/sigma/: and.hpp  exp.hpp  gsp.hpp  lipmaa.hpp  or.hpp  phi.hpp  sigma.hpp
include/util/: basictypes.hpp  convert.hpp  errorhandling.hpp  foursquares.hpp  zkprint.hpp
include/zkparser/: zkparser.h  zkparser_internal.h
src/: CMakeLists.txt  benchmark.cpp
src/CodeManagement/: CMakeLists.txt  test-CodeManagement-IfBranch.cpp  test-CodeManagement-Instruction.cpp  test-CodeManagement-Operator.cpp
src/CodeManagement/ccr/: ACCRVisitor.cpp  ACollectedCodeRepr.cpp  AConstructorCallCCR.cpp  ACopyAssignmentCallCCR.cpp  ACopyConstructorCallCCR.cpp  ADestructorCallCCR.cpp  AExecutableCCR.cpp  AFunctionCallCCR.cpp  AInstructionCallCCR.cpp  AOperatorCallCCR.cpp  AProcedureCallCCR.cpp  AVarSpecialCallCCR.cpp  AVariableCCR.cpp
src/CodeManagement/ccr/impl/: CommentCCR.cpp  ConstructorCallCCR.cpp  CopyAssignmentCallCCR.cpp  CopyConstructorCallCCR.cpp  CopyableVariableCCR.cpp  DestructorCallCCR.cpp  FunctionCallCCR.cpp  IfBranchCallCCR.cpp  OperatorCallCCR.cpp  ProcedureCallCCR.cpp  ProgramCCR.cpp  ScopeBlockCCR.cpp  VariableCCR.cpp
src/CodeManagement/ccw/: AFunction.cpp  AInstruction.cpp  AOperator.cpp  AProcedure.cpp  AVariable.cpp
src/CodeManagement/ccw/impl/: CopyableVariable.cpp  Function.cpp  Operator.cpp  Procedure.cpp  Variable.cpp
src/CodeManagement/core/: ACodeObserver.cpp
src/CodeManagement/core/impl/: CodeCollector.cpp  CodeManager.cpp
src/CodeManagement/exec/: AExplicitCSrcInstCaster.cpp  AImplicitSrcInstCaster.cpp  ASourceInstanceCaster.cpp  AVariableInstance.cpp  AVariablesTable.cpp
src/CodeManagement/exec/impl/: ConstSourceInstance.cpp  CopyableVariableInstance.cpp  ExplicitCSrcInstCaster.cpp  ImplicitSrcInstCaster.cpp  SourceInstance.cpp  VariableInstance.cpp  VariablesTable.cpp
src/CodeManagement/misc/debug/impl/: DebugInfo.cpp  Exception.cpp
src/CodeManagement/misc/stream/: AStream.cpp
src/CodeManagement/misc/stream/impl/: FileStream.cpp  Logger.cpp  NullStream.cpp  StringStream.cpp
src/bench/: CMakeLists.txt  egov.cpp  egov.zk
src/bignum/: CMakeLists.txt  bignum.cpp  bignum_gmp.cpp
src/compiler/: ACCRtoCodeCompiler.cpp  AZKProtocol.cpp  CCodeIdentifiers.cpp  CMakeLists.txt  ProgramCCRtoCCodeCompiler.cpp  ZKFileToProgramCCRCompiler.cpp  ZKProgramCCRTester.cpp  test-compile-and.cpp  test-compile-interval.cpp  test-compile-phi.cpp
src/compiler/test-compiledCCode/: CMakeLists.txt  ZKCCodeTester.cpp  ZKCCodeTester.hpp
src/compiler/test-compiledCCode/and/: CMakeLists.txt  test-compiledCCode-and.cpp  zk_prover.c  zk_prover.h  zk_verifier.c  zk_verifier.h
src/compiler/test-compiledCCode/interval/: CMakeLists.txt  test-compiledCCode-interval.cpp  zk_prover.c  zk_prover.h  zk_verifier.c  zk_verifier.h
src/compiler/test-compiledCCode/phi/: CMakeLists.txt  test-compiledCCode-phi.cpp  zk_prover.c  zk_prover.h  zk_verifier.c  zk_verifier.h
src/element/: CMakeLists.txt  atomic.cpp  element.cpp  tuple.cpp
src/group/: CMakeLists.txt  group.cpp  test-group-z.cpp  test-group-z_add_n.cpp  test-group-z_mul_n.cpp  z.cpp  z_add_n.cpp  z_mul_n.cpp
src/hash/: CMakeLists.txt  hash.cpp  sha1.cpp  test-sha1.cpp
src/hom/: CMakeLists.txt  hom.cpp  test-hom.cpp  test-hom2.cpp
src/parser/: CMakeLists.txt  parser.cpp  test-parserAllAnd.cpp  test-parserAllAnd.zk  test-parserAllAndOr.cpp  test-parserAllAndOr.zk  test-parserAllIntervall.cpp  test-parserAllIntervall.zk  test-parserAllMult.cpp  test-parserAllMult.zk  test-parserAllOr.cpp  test-parserAllOr.zk  test-parserAnd.cpp  test-parserAnd.zk  test-parserAnd0.cpp  test-parserAnd0.zk  test-parserGsp.zk  test-parserIntervall.cpp  test-parserIntervall.zk  test-parserMult.cpp  test-parserMult.zk  test-parserNonInt.cpp  test-parserNonInt.zk  test-parserOr.cpp  test-parserOr.zk  test-parserPhi.cpp  test-parserPhi2.cpp  test-parserPhi2.zk  test-parserPhi3.cpp  test-parserPhi3.zk  test-parserPhi4.cpp  test-parserPhi4.zk  test-parserProxy.cpp  test-parserProxy1.zk
src/random/: CMakeLists.txt  random.cpp  seedLinux.c  seedWIN.c  test-random.cpp
src/sigma/: CMakeLists.txt  SigmaAND-test.cpp  SigmaANDgsp-test.cpp  SigmaExp-test.cpp  SigmaGsp-test.cpp  SigmaOR-test.cpp  SigmaORgsp-test.cpp  SigmaPhi-test.cpp  and.cpp  exp.cpp  gsp.cpp  lipmaa.cpp  or.cpp  phi.cpp  sigma.cpp
src/util/: CMakeLists.txt  basictypes.cpp  convert.cpp  errorhandling.cpp  foursquares.cpp  test-convert0.cpp  test-convert1.cpp  test-convert2.cpp  test-foursquares.cpp  testbench.cpp  zkprint.cpp
src/zkparser/: CMakeLists.txt  expression.c  group.c  hom.c  lexer.c  node.c  sigma.c  statementlist.c  string.c  utils.c  var.c  varref.c  zkparser.c  zkparser_grammar.y
(+21 files in other folders)
